[package]
name = "rmcts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# egg = { version = "0.9.3", features = ["lp"] }
egg = { version = "0.9.3"}
rand = { version = "0.8.5"}


# test only deps
[dev-dependencies]
fxhash = "0.2.1"
ordered-float = "3.0.0"
env_logger = { version = "0.9.0", default-features = false }
